correcting shadow fort title on small viewport

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ span {
 @media screen and (min-width: 201px) and (max-width:450px) {
 	.title {
 		font-size: 1.5em;
+		text-shadow: 1px 1px rgba(0,0,0,0.30);
 	}
 }
 
